# ETL_DUCKDB

./: .env  README.md  app.py  duckdb.db  pipeline.py  pyproject.toml
